project('gala-daemon-gtk3',
    'c', 'vala',
    version: '8.2.5',
    meson_version: '>= 0.59.0',
    license: 'GPL3',
)

gala_daemon_sources = files(
    'Main.vala',
    'DBus.vala',
    'MonitorLabel.vala',
    'Window.vala',
    'WindowMenu.vala',
    'BackgroundMenu.vala',
)

# granite_dep_old = dependency('granite')
# hdy_dep = dependency('libhandy-1')
# 
# gala_daemon_bin = executable(
#     'gala-daemon-gtk3',
#     gala_daemon_sources,
#     dependencies: [granite_dep_old, hdy_dep],
#     include_directories: include_directories('.'),
#     install: true,
# )
